# C-Programming

./: README.md  file2.txt
Lab-2/: 11.c
Lab-3/: 5.c
Lab-4/: 4.c
Lab-8/: 11.c
Lab-Git/: file1.txt  mergesort.py  sort.c
Lab-Git-Sem2/: sort.c
Sem1/Lab-1/: 1.c  2.c
Sem1/Lab-2/: 12.c  13.c
Sem1/Lab-3/: 4.c
Sem1/Lab-4/: 12.c
Sem1/Lab-5/: 4.c
Sem1/Lab-6/: 14.1.c
Sem1/Lab-7/: Matriza-4.c
Sem1/Lab-9/: Makefile  main.c  time.c  time.h
Sem2/Lab-1/: Lab1.c
Sem2/Lab-2/: Lab2.c
Sem2/Lab-3/: file.txt  sort.c
Sem2/Lab-4/: File.c
Sem2/Lab-5/: Lab5.c
Sem2/Lab-6/: CMakeLists.txt  main.c  sort.c  sort.h  student.c  student.h
Sem2/Lab-7/: file.c
Sem2/Lab-8/: CMakeLists.txt  math_utils.c  math_utils.h  test_math_utils.c
Sem2/РГР/: CMakeLists.txt  TranslateProg.c  dictionary.txt  test_translator.c  text_chn.txt  text_rus.txt  translator.c  translator_utils.c  translator_utils.h
